--- a/tex/biological_inspiration.tex
+++ b/tex/biological_inspiration.tex
@@ -133,6 +133,13 @@ Please note that the line on the left is translated and stretched. However, the 
 
 Projection fibres thus provide generalisation, i.e. different, transformed versions of an object are recognised and mapped to a reference frame. This explains the ability of humans to see a new object once and immediately recognise it in a transformed version.
 
+\subsection{Correspondence Finding}\seclbl{neuroscience_findings_correspondence_finding}
+Experiments from neuroscience show that the recognition time for humans depends on the size \sidecite{bundesen_visual_1975} and orientation \sidecite{jolicoeur_time_1985, lawson_effect_1999} of objects. Thus, it takes time to align the external world with internal representations.
+This suggests that the brain implements an active dynamic process for correspondence finding rather than having a single forward pass.
+Furthermore, physiological evidence exists that connections in the visual system are not static and suggest that receptive fields in the visual system change from one instance to the next to route the current neuronal activations to representations \sidecite{kusunoki_time_2003, womelsdorf_dynamic_2006}.
+
+Thus, having a system that maps scene representations to object prototypes is in line with neuroscientific evidence. Moreover, the findings suggest that this mapping process takes place over a short amount of time where projection fibres self-organise to initiate the corresponding mapping.
+
 
 \subsection{Local Learning Principle}\seclbl{neuroscience_findings_local_learning_principle}
 In the brain, consistency is evaluated at the level of individual synapses in every single point in the network \sidecite{hebb_organization_1949}. Each synapse is established if the firing of its source neuron and its target neuron are consistent, allowing the source neuron to predict the activity of the target neuron. This process is crucial for establishing net structures, where each neuron within a net fragment can predict the firing of other neurons with a high probability \sidecite{widrow_natures_2019}.
